<resources>
    <string name="app_name">MusicScore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_compositor">Compositor</string>
    <string name="hint_instrumento">Instrumento</string>
    <string name="hint_narchivo">Nombre Archivo</string>
    <string name="hint_name">Nombre</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Crear Cuenta</string>
    <string name="btn_link_to_register">No es miembro? Registrar ahora.</string>
    <string name="btn_link_to_login">Ya está registrado! Iniciar sesión.</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_logout">LOGOUT</string>


</resources>
